[gd_scene load_steps=2 format=3 uid="uid://b4e5nmyyh1iyw"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_oynkh"]

[node name="Main" type="Node2D"]
script = ExtResource("1_oynkh")

[node name="Buttons" type="Marker2D" parent="."]

[node name="Spot0" type="Button" parent="Buttons"]
offset_left = 4.0
offset_top = 536.0
offset_right = 104.0
offset_bottom = 636.0
text = "0"

[node name="Spot1" type="Button" parent="Buttons"]
offset_left = 4.0
offset_top = 430.0
offset_right = 104.0
offset_bottom = 530.0
text = "0"

[node name="Spot2" type="Button" parent="Buttons"]
offset_left = 4.0
offset_top = 324.0
offset_right = 104.0
offset_bottom = 424.0
text = "0"

[node name="Spot3" type="Button" parent="Buttons"]
offset_left = 4.0
offset_top = 218.0
offset_right = 104.0
offset_bottom = 318.0
text = "0"

[node name="Spot4" type="Button" parent="Buttons"]
offset_left = 4.0
offset_top = 112.0
offset_right = 104.0
offset_bottom = 212.0
text = "0"

[node name="Spot5" type="Button" parent="Buttons"]
offset_left = 4.0
offset_top = 6.0
offset_right = 104.0
offset_bottom = 106.0
text = "0"

[node name="Spot6" type="Button" parent="Buttons"]
offset_left = 308.0
offset_top = 6.0
offset_right = 408.0
offset_bottom = 106.0
text = "0"

[node name="Spot7" type="Button" parent="Buttons"]
offset_left = 412.0
offset_top = 6.0
offset_right = 512.0
offset_bottom = 106.0
text = "0"

[node name="Spot8" type="Button" parent="Buttons"]
offset_left = 516.0
offset_top = 6.0
offset_right = 616.0
offset_bottom = 106.0
text = "0"

[node name="Spot9" type="Button" parent="Buttons"]
offset_left = 620.0
offset_top = 6.0
offset_right = 720.0
offset_bottom = 106.0
text = "0"

[node name="Spot10" type="Button" parent="Buttons"]
offset_left = 724.0
offset_top = 6.0
offset_right = 824.0
offset_bottom = 106.0
text = "0"

[node name="Spot11" type="Button" parent="Buttons"]
offset_left = 828.0
offset_top = 6.0
offset_right = 928.0
offset_bottom = 106.0
text = "0"

[node name="Spot12" type="Button" parent="Buttons"]
offset_left = 932.0
offset_top = 6.0
offset_right = 1032.0
offset_bottom = 106.0
text = "0"

[node name="Spot13" type="Button" parent="Buttons"]
offset_left = 1036.0
offset_top = 6.0
offset_right = 1136.0
offset_bottom = 106.0
text = "0"

[node name="Spot14" type="Button" parent="Buttons"]
offset_left = 533.0
offset_top = 304.0
offset_right = 633.0
offset_bottom = 404.0
text = "0"

[node name="Spot15" type="Button" parent="Buttons"]
offset_left = 429.0
offset_top = 304.0
offset_right = 529.0
offset_bottom = 404.0
text = "0"

[connection signal="pressed" from="Buttons/Spot0" to="." method="_on_spot_0_pressed"]
[connection signal="pressed" from="Buttons/Spot1" to="." method="_on_spot_1_pressed"]
[connection signal="pressed" from="Buttons/Spot2" to="." method="_on_spot_2_pressed"]
[connection signal="pressed" from="Buttons/Spot3" to="." method="_on_spot_3_pressed"]
[connection signal="pressed" from="Buttons/Spot4" to="." method="_on_spot_4_pressed"]
[connection signal="pressed" from="Buttons/Spot5" to="." method="_on_spot_5_pressed"]
[connection signal="pressed" from="Buttons/Spot6" to="." method="_on_spot_6_pressed"]
[connection signal="pressed" from="Buttons/Spot7" to="." method="_on_spot_7_pressed"]
[connection signal="pressed" from="Buttons/Spot8" to="." method="_on_spot_8_pressed"]
[connection signal="pressed" from="Buttons/Spot9" to="." method="_on_spot_9_pressed"]
[connection signal="pressed" from="Buttons/Spot10" to="." method="_on_spot_10_pressed"]
[connection signal="pressed" from="Buttons/Spot11" to="." method="_on_spot_11_pressed"]
[connection signal="pressed" from="Buttons/Spot12" to="." method="_on_spot_12_pressed"]
[connection signal="pressed" from="Buttons/Spot13" to="." method="_on_spot_13_pressed"]
[connection signal="pressed" from="Buttons/Spot14" to="." method="_on_spot_14_pressed"]
[connection signal="pressed" from="Buttons/Spot15" to="." method="_on_spot_15_pressed"]
